<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLoginBack"
    tools:context="com.gdou.yudong.activity.RegisterActivity">


    <EditText
        android:id="@+id/edt_username"
        android:layout_width="250dp"
        android:ems="16"
        android:background="@color/colorEditText"
        android:hint="@string/usernameEdt"
        android:paddingLeft="8dp"
        android:layout_above="@id/edt_password"
        android:layout_alignLeft="@id/edt_password"
        android:layout_height="40dp" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="250dp"
        android:inputType="textPassword"
        android:hint="@string/passwordEdt"
        android:background="@color/colorEditText"
        android:ems="16"
        android:paddingLeft="8dp"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true"
        android:textSize="16sp"
        android:layout_height="40dp" />

    <EditText
        android:id="@+id/edt_verificationCode"
        android:layout_width="125dp"
        android:hint="@string/verificationCodeEdt"
        android:background="@color/colorEditText"
        android:ems="16"
        android:paddingLeft="8dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/edt_password"
        android:layout_alignLeft="@+id/edt_password"
        android:textSize="16sp"
        android:layout_height="40dp" />


    <Button
        android:id="@+id/btn_sendVerificationCode"
        android:text="@string/sendCodeBtn"
        android:layout_below="@id/edt_password"
        android:layout_alignRight="@id/edt_password"
        android:layout_marginTop="13dp"
        android:layout_width="100dp"
        android:layout_height="50dp"
        />

    <Button
        android:id="@+id/btn_register"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/edt_verificationCode"
        android:layout_marginTop="50dp"
        android:text="@string/registerBtn"
        android:layout_width="260dp"
        android:layout_height="50dp"
        />

    <TextView
        android:text="@string/protocolTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:id="@+id/txt_protocol"
        android:textSize="10sp" />

    <Button
        android:id="@+id/btn_back"
        android:text="@string/backBtn"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
