<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLoginBack"
    tools:context="com.gdou.yudong.activity.LoginActivity">

    <ImageView
        android:background="@mipmap/icon"
        android:layout_width="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="104dp"
        android:layout_height="80dp" />

    <EditText
        android:layout_width="200dp"
        android:ems="16"
        android:background="@color/colorEditText"
        android:hint="@string/usernameEdt"
        android:paddingLeft="8dp"
        android:layout_centerInParent="true"
        android:id="@+id/edt_username"
        android:layout_height="40dp" />

    <EditText
        android:layout_width="200dp"
        android:inputType="textPassword"
        android:hint="@string/passwordEdt"
        android:background="@color/colorEditText"
        android:ems="16"
        android:paddingLeft="8dp"
        android:id="@+id/edt_password"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/edt_username"
        android:layout_alignLeft="@+id/edt_username"
        android:layout_alignStart="@+id/edt_username"
        android:textSize="16sp"
        android:layout_height="40dp" />

    <LinearLayout
        android:id="@+id/linearlayout_btn"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_below="@id/edt_password"
        android:layout_marginTop="50dp"
        android:layout_height="50dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <Button
                android:id="@+id/btn_register"
                android:layout_centerInParent="true"
                android:text="@string/registerBtn"
                android:layout_width="150dp"
                android:layout_height="50dp"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <Button
                android:id="@+id/btn_login"
                android:text="@string/loginBtn"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_width="150dp"
                android:layout_height="50dp"
                />
        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/txt_forget"
        android:text="@string/forgetTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/edt_password"
        android:layout_alignRight="@+id/edt_password"
        android:layout_alignEnd="@+id/edt_password"
        />

    <TextView
        android:text="@string/protocolTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:id="@+id/txt_protocol"
        android:textSize="10sp" />

</RelativeLayout>
